6746212: Broken MouseEvents for TrayIcon

Reviewed-by: dcherepanov, art